@@ -186,10 +186,11 @@ add_disconnect_item (NMDevice *device,
 	CdmaMenuItemInfo *info;
 
 	state = nm_device_get_state (device);
-	if (   state == NM_DEVICE_STATE_DOWN
-	    || state == NM_DEVICE_STATE_DISCONNECTED
-	    || state == NM_DEVICE_STATE_FAILED
-	    || state == NM_DEVICE_STATE_CANCELLED)
+	if (!(state == NM_DEVICE_STATE_ACTIVATED || /* activated */
+	      state == NM_DEVICE_STATE_PREPARE ||   /* or activating */
+	      state == NM_DEVICE_STATE_CONFIG ||
+	      state == NM_DEVICE_STATE_NEED_AUTH ||
+	      state == NM_DEVICE_STATE_IP_CONFIG))
 		return;
 
 	item = gtk_menu_item_new_with_label (_("Disconnect..."));
