@@ -1,3 +1,9 @@
+2008-04-08  Tambet Ingo  <tambet@gmail.com>
+
+	* src/applet-device-cdma.c (add_disconnect_item): 
+	* src/applet-device-gsm.c (add_disconnect_item): Update to check the new
+	device states.
+
 2008-04-03  Dan Williams  <dcbw@redhat.com>
 
 	Switch keyring tagging of passwords to use the connection ID, not the
